--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "aseq",
   "version": "1.0.0",
-  "main": "index.js",
+  "entry": "./src/index.js",
+  "main": "./lib/index.js",
   "repository": "git@github.com:njlr/aseq.git",
   "author": "njlr <njlr@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "build": "rollup -c",
+    "test": "jest",
+    "prepublishOnly": "yarn test && yarn build"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
     "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.44",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
-    "babel-core": "^7.0.0-0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
     "jest": "^22.4.3",
-    "regenerator-runtime": "^0.11.1"
+    "regenerator-runtime": "^0.11.1",
+    "rollup": "^0.58.1",
+    "rollup-plugin-babel": "4.0.0-beta.0"
   }
 }
