--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "njlr <njlr@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rm -rf ./lib && rollup -c",
     "test": "jest",
     "prepublishOnly": "yarn test && yarn build"
   },
