--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@njlr/aseq",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "entry": "./src/index.js",
   "main": "./lib/index.js",
   "repository": "git@github.com:njlr/aseq.git",
@@ -12,15 +12,20 @@
     "prepublishOnly": "yarn test && yarn build"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^22.4.3",
-    "jest": "^22.4.3",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/plugin-proposal-async-generator-functions": "^7.7.4",
+    "@babel/plugin-proposal-pipeline-operator": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
+    "core-js": "^3.4.2",
+    "jest": "^24.9.0",
     "regenerator-runtime": "^0.11.1",
-    "rollup": "^0.58.1",
-    "rollup-plugin-babel": "4.0.0-beta.0"
+    "rollup": "^1.27.1",
+    "rollup-plugin-babel": "^4.0.0-beta.0"
+  },
+  "jest": {
+    "testURL": "http://localhost"
   }
 }
